@@ -1,0 +1,25 @@
+//
+// Mono.ILASM.MiscInstr
+//
+// Author(s):
+//  Jackson Harper (Jackson@LatitudeGeo.com)
+//
+// (C) 2003 Jackson Harper, All rights reserved
+//
+
+
+using System;
+
+namespace Mono.ILASM {
+
+        public enum MiscInstr {
+                ldstr,
+                ldc_r4,
+                ldc_r8,
+                ldc_i8,
+                _switch,
+                calli,
+                ldtoken
+        }
+}
+
